--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -11,6 +11,7 @@
   }
 }
 
+
 input,
 .input,
 textarea,
@@ -33,6 +34,7 @@ select,
 	border: 1px solid $color-primary !important;
   }
 }
+
 
 input[type="radio"] {
   background: rgba($color-secondary, .4) !important;
@@ -61,6 +63,7 @@ input[type="radio"] {
   }
 }
 
+
 option {
   font-family: $font-default;
   background: $color-background !important;
@@ -68,6 +71,7 @@ option {
   box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
   color: $color-text;
 }
+
 
 input[type="text"],
 input[type="number"],
@@ -79,6 +83,7 @@ input[type="password"] {
   border: 1px solid rgba($color-primary, .5);
   box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
 }
+
 
 input[type="checkbox"] {
   position: relative;
@@ -107,6 +112,7 @@ input[type="checkbox"] {
   }
 }
 
+
 input[type="checkbox"],
 select,
 table.mceEditor tr td select.mceSelectList {
@@ -114,16 +120,19 @@ table.mceEditor tr td select.mceSelectList {
   background: rgba($color-secondary, .4);
   border: 1px solid rgba($color-primary, .5);
   box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
-
 }
+
 
 .checkbox > input:active {
   border: 1px solid $color-primary;
 }
 
+
 textarea {
   min-height: 5rem;
+  padding: .5rem 1rem;
 }
+
 
 .mceEditorIframe {
   min-height: 150px;
