--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -93,6 +93,9 @@ input[type="submit"],
 #mce_editor_0_parent input,
 #bcalc input[type="button"],
 #bcalc input[type="submit"],
+#page_bcalc #fleet_select_box p:last-child  a,
+#page_bcalc #add_own p:nth-of-type(2) a,
+#page_bcalc #add_own p:nth-of-type(3) a,
 #page input[type="button"],
 #add_other input[type="button"],
 ul.alliance_attack_claims_list a,
