--- a/scss/components/_bcalc.scss
+++ b/scss/components/_bcalc.scss
@@ -502,6 +502,15 @@
 	}
   }
 
+  #add_other,
+  #fleet_select_box,
+  #side_select_box {
+	position: fixed;
+	top: 25% !important;
+	left: 50% !important;
+	transform: translateX(-50%);
+  }
+
   #side_select_box {
 	width: 216px !important;
 
@@ -540,7 +549,7 @@
 
 	  &:last-child {
 		a {
-		  margin: 0;
+		  margin: 0 !important;
 		}
 	  }
 	}
