--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -135,6 +135,30 @@ hr {
 
 /* OTHER
    ---------------------------------*/
+.gc {
+  color: $color-gc;
+}
+
+
+.moc {
+  color: $color-moc;
+}
+
+
+.mod {
+  color: $color-mod;
+}
+
+
+.mow {
+  color: $color-mow;
+}
+
+.bashlimit {
+  color: orange;
+}
+
+
 #important_messages_contents {
   width: 80%;
   background: $color-secondary !important;
