--- a/scss/components/galaxy_status.scss
+++ b/scss/components/galaxy_status.scss
@@ -3,7 +3,6 @@
 	#contents {
 	  .maintext {
 		table {
-
 		  tr {
 			&.mission_return {
 			  background: rgba($color-grey, .1);
@@ -17,8 +16,25 @@
 			  }
 			}
 
-			&[id*="notes_"] input[type="button"] {
-			  margin: 0;
+			&[id*="notes_"] {
+			  input[type="button"] {
+				margin: 0;
+			  }
+
+			  td {
+				form ~ form {
+				  p {
+					&:not(:first-child) {
+					  input {
+						&:nth-of-type(2) {
+						  margin: .5rem 0 0 0;
+						  width: 98%;
+						}
+					  }
+					}
+				  }
+				}
+			  }
 			}
 		  }
 		}
