--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -252,7 +252,7 @@
 			  padding: 0 10px;
 			  text-align: right;
 			  justify-content: flex-end;
-			  min-width: 110px;
+			  min-width: 138px;
 
 			  a {
 				display: inline-flex;
@@ -260,7 +260,7 @@
 				justify-content: center;
 				border-radius: 4px;
 				color: black !important;
-				margin-right: 4px;
+				margin: 0 1px;
 				font-size: 1rem;
 				line-height: 1rem;
 
