--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -305,7 +305,7 @@
 			.ally_def_attacker_orig_eta {
 			  order: 4;
 			  width: 70px;
-			  justify-content: flex-end;
+			  justify-content: flex-start;
 			  align-items: center;
 
 			  &:before {
