--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -12,6 +12,10 @@ $color-cathaar: #4d88bc;
 $color-xandathrii: #2ba87e;
 $color-zikonian: #c93716;
 $color-eitraides: #a76cc3;
+//$color-kinthia: #a76cc3;
+$color-kinthia: #7745d2;
+//$color-kinthia: #7b2ec6;
+$color-slythonian: #c2146a;
 //
 $color-primary: #52a5f8;
 $color-primary-dark: darken($color-primary, 20%);
