--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -13,259 +13,259 @@
   border: 1px solid transparent;
   border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
   border-image-slice: 1;
-  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, .25), 0 0 3px 3px rgba(0, 0, 0, .15);
+  box-shadow: inset 0 0 8px 2px rgba(#000, .25), 0 0 3px 3px rgba(#000, .15);
   position: relative;
   @include respond-below(sm) {
-	grid-row: 1/3;
-	grid-column: 2 / 2;
-	max-width: calc(100vw - 114px);
-	> * {
-	  max-width: 50%;
-	  float: left;
+    grid-row: 1/3;
+    grid-column: 2 / 2;
+    max-width: calc(100vw - 114px);
+    > * {
+      max-width: 50%;
+      float: left;
 
-	  &#header_planet {
-		max-width: unset;
-		font-size: .6875rem !important;
-	  }
-	}
+      &#header_planet {
+        max-width: unset;
+        font-size: .6875rem !important;
+      }
+    }
   }
 
   > div {
-	width: 50%;
-	max-width: 245px;
-	padding: 0 2.25rem;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	margin: 0 0 .5rem;
+    width: 50%;
+    max-width: 245px;
+    padding: 0 2.25rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 0 .5rem;
 
-	&:last-of-type:nth-of-type(even) {
-	  max-width: unset;
-	  width: 100%;
-	  border-top: 1px solid transparent;
-	  margin-top: .75rem;
-	  padding-top: 4px;
-	  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
-	  border-image-slice: 1;
-	  justify-content: center;
-	  align-items: baseline;
+    &:last-of-type:nth-of-type(even) {
+      max-width: unset;
+      width: 100%;
+      border-top: 1px solid transparent;
+      margin-top: .75rem;
+      padding-top: 4px;
+      border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
+      border-image-slice: 1;
+      justify-content: center;
+      align-items: baseline;
 
-	  span {
-		max-width: 33px;
-	  }
-	}
+      span {
+        max-width: 33px;
+      }
+    }
 
-	&:last-of-type:nth-of-type(odd) {
-	  margin-bottom: .75rem;
-	}
+    &:last-of-type:nth-of-type(odd) {
+      margin-bottom: .75rem;
+    }
 
-	span {
-	  flex-basis: 50%;
-	}
+    span {
+      flex-basis: 50%;
+    }
   }
 
   #header_mail,
   #header_news {
-	max-width: unset;
-	background: rgba(black, .6);
-	//transition: ease background-color .5s;
-	position: absolute;
-	top: 0;
+    max-width: unset;
+    background: rgba(black, .6);
+    //transition: ease background-color .5s;
+    position: absolute;
+    top: 0;
 
-	&:hover {
-	  background: rgba(black, 1);
+    &:hover {
+      background: rgba(black, 1);
 
-	  a {
-		color: white !important;
-	  }
-	}
+      a {
+        color: white !important;
+      }
+    }
 
-	a {
-	  flex-basis: 100%;
-	  text-align: center;
-	  font-size: $text-small;
-	  text-transform: uppercase;
-	  font-weight: bold;
-	  padding: .5rem 0 !important;
-	  color: $color-offwhite !important;
-	  transition: ease all .5s;
-	}
+    a {
+      flex-basis: 100%;
+      text-align: center;
+      font-size: $text-small;
+      text-transform: uppercase;
+      font-weight: bold;
+      padding: .5rem 0 !important;
+      color: $color-offwhite !important;
+      transition: ease all .5s;
+    }
 
-	#mail_new {
-	  background: $color-positive;
-	  color: black !important;
+    #mail_new {
+      background: $color-positive;
+      color: black !important;
 
-	  &:hover {
-		background: rgba($color-positive, .8);
-	  }
-	}
+      &:hover {
+        background: rgba($color-positive, .8);
+      }
+    }
 
-	#news_new {
-	  background: $color-neutral;
-	  color: black !important;
+    #news_new {
+      background: $color-neutral;
+      color: black !important;
 
-	  &:hover {
-		background: rgba($color-neutral, .8);
-	  }
-	}
+      &:hover {
+        background: rgba($color-neutral, .8);
+      }
+    }
   }
 
   #header_mail {
-	padding: 0;
-	order: 1;
-	border: 1px solid transparent;
-	border-image: linear-gradient(to left, rgb(60, 107, 156) 0%, #24313f 100%);
-	border-image-slice: 1;
-	left: 0;
+    padding: 0;
+    order: 1;
+    border: 1px solid transparent;
+    border-image: linear-gradient(to left, rgb(60, 107, 156) 0%, #24313f 100%);
+    border-image-slice: 1;
+    left: 0;
 
-	&:hover {
-	  border-image: linear-gradient(to left, $color-primary 0%, #24313f 100%);
-	  border-image-slice: 1;
-	}
+    &:hover {
+      border-image: linear-gradient(to left, $color-primary 0%, #24313f 100%);
+      border-image-slice: 1;
+    }
   }
 
   #header_news {
-	padding: 0;
-	order: 2;
-	border: 1px solid transparent;
-	border-image: linear-gradient(to right, rgb(60, 107, 156) 0%, #24313f 100%);
-	border-image-slice: 1;
-	right: 0;
+    padding: 0;
+    order: 2;
+    border: 1px solid transparent;
+    border-image: linear-gradient(to right, rgb(60, 107, 156) 0%, #24313f 100%);
+    border-image-slice: 1;
+    right: 0;
 
-	&:hover {
-	  border-image: linear-gradient(to right, $color-primary 0%, #24313f 100%);
-	  border-image-slice: 1;
-	}
+    &:hover {
+      border-image: linear-gradient(to right, $color-primary 0%, #24313f 100%);
+      border-image-slice: 1;
+    }
   }
 
   .textlabel {
-	margin-left: 0;
-	font-size: $text-small;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	color: #bbb;
-	font-weight: bold;
+    margin-left: 0;
+    font-size: $text-small;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #bbb;
+    font-weight: bold;
 
-	&:after {
-	  content: ":";
-	}
+    &:after {
+      content: ":";
+    }
   }
 
   .textvalue {
-	font-weight: bold;
-	text-align: right;
-	padding-right: 0;
+    font-weight: bold;
+    text-align: right;
+    padding-right: 0;
   }
 
   #header_planet {
-	max-width: unset;
-	height: unset;
-	text-indent: unset;
-	position: absolute;
-	top: -35px;
-	left: 0;
-	padding: 0;
+    max-width: unset;
+    height: unset;
+    text-indent: unset;
+    position: absolute;
+    top: -35px;
+    left: 0;
+    padding: 0;
 
-	span.textlabel {
-	  flex-basis: 100%;
-	  font-size: $text-huge;
-	  letter-spacing: 2px;
-	  text-shadow: 1px 1px 3px black;
-	  white-space: nowrap;
+    span.textlabel {
+      flex-basis: 100%;
+      font-size: $text-huge;
+      letter-spacing: 2px;
+      text-shadow: 1px 1px 3px black;
+      white-space: nowrap;
 
-	  &:after {
-		display: none;
-	  }
-	}
+      &:after {
+        display: none;
+      }
+    }
 
-	.ter,
-	.cat,
-	.xan,
-	.zik,
-	.etd {
-	  font-style: italic;
-	  font-size: $text-large;
-	  padding-right: 2px;
-	}
+    .ter,
+    .cat,
+    .xan,
+    .zik,
+    .etd {
+      font-style: italic;
+      font-size: $text-large;
+      padding-right: 2px;
+    }
   }
 
   #header_metal {
-	order: 7;
+    order: 7;
 
-	.textvalue {
-	  &:before {
-		background: url(/images/template53/metal_16.png) no-repeat;
-	  }
-	}
+    .textvalue {
+      &:before {
+        background: url(/images/template53/metal_16.png) no-repeat;
+      }
+    }
   }
 
   #header_value {
-	order: 6;
+    order: 6;
   }
 
   #header_crystal {
-	order: 9;
+    order: 9;
 
-	.textvalue {
-	  &:before {
-		background: url(/images/template53/crystal_16.png) no-repeat;
-	  }
-	}
+    .textvalue {
+      &:before {
+        background: url(/images/template53/crystal_16.png) no-repeat;
+      }
+    }
   }
 
   #header_xp {
-	order: 10;
+    order: 10;
   }
 
   #header_eonium {
-	order: 11;
+    order: 11;
 
-	.textvalue {
-	  &:before {
-		background: url(/images/template53/eonium_16.png) no-repeat;
-	  }
-	}
+    .textvalue {
+      &:before {
+        background: url(/images/template53/eonium_16.png) no-repeat;
+      }
+    }
   }
 
   #header_score {
-	order: 8;
+    order: 8;
   }
 
   #header_asteroids {
-	order: 5;
+    order: 5;
   }
 
   #header_rank {
-	order: 12;
+    order: 12;
   }
 
   #header_tick {
-	order: 3;
+    order: 3;
   }
 
   #header_remaining {
-	order: 3;
-	//text-indent: 5px;
+    order: 3;
+    //text-indent: 5px;
   }
 
   #header_metal,
   #header_crystal,
   #header_eonium {
-	.textvalue {
-	  position: relative;
+    .textvalue {
+      position: relative;
 
-	  &:before {
-		width: 16px;
-		height: 13px;
-		margin-right: .4rem;
-		content: "";
-		display: inline-block;
-		position: absolute;
-		right: 0;
-		top: 40%;
-		transform: translate(150%, -50%);
-	  }
-	}
+      &:before {
+        width: 16px;
+        height: 13px;
+        margin-right: .4rem;
+        content: "";
+        display: inline-block;
+        position: absolute;
+        right: 0;
+        top: 40%;
+        transform: translate(150%, -50%);
+      }
+    }
   }
 }
 
@@ -293,10 +293,12 @@
 #page_manual .Etd td {
   color: $color-eitraides;
 }
+
 .kin,
 #page_manual .Kin td {
   color: $color-kinthia;
 }
+
 .sly,
 #page_manual .Sly td {
   color: $color-slythonian;
@@ -315,52 +317,53 @@
   border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
   border-image-slice: 1;
   padding: 30px 0 0;
-  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, .25), 0 0 3px 3px rgba(0, 0, 0, .15);
+  box-shadow: inset 0 0 8px 2px rgba(#000, .25), 0 0 3px 3px rgba(#000, .15);
   position: relative;
+  overflow: hidden;
   @include respond-below(sm) {
-	grid-row: 2/3;
-	grid-column: 2 / 2;
-	max-width: calc(100vw - 114px);
+    grid-row: 2/3;
+    grid-column: 2 / 2;
+    max-width: calc(100vw - 114px);
   }
 
   &:before {
-	display: block;
-	content: 'Planetary Development ';
-	width: 100%;
-	padding: .5rem 0;
-	font-size: $text-small;
-	text-transform: uppercase;
-	font-weight: bold;
-	text-align: center;
-	color: $color-offwhite;
-	background: rgba(black, .6);
-	border-bottom: 1px solid transparent;
-	border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
-	border-image-slice: 1;
-	transition: ease all 0.5s;
-	position: absolute;
-	top: 0;
+    display: block;
+    content: 'Planetary Development ';
+    width: 100%;
+    padding: .5rem 0;
+    font-size: $text-small;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+    color: $color-offwhite;
+    background: rgba(black, .6);
+    border-bottom: 1px solid transparent;
+    border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
+    border-image-slice: 1;
+    transition: ease all 0.5s;
+    position: absolute;
+    top: 0;
   }
 
   &:hover {
-	&:before {
-	  background: rgba(black, 1);
-	}
+    &:before {
+      background: rgba(black, 1);
+    }
   }
 
   > div {
-	width: 350px;
+    width: 350px;
   }
 
   .textlabel {
-	margin-left: 0;
-	font-size: $text-small;
-	letter-spacing: .5px;
-	text-transform: uppercase;
-	color: #bbb;
-	font-weight: bold;
-	padding: 0 .5rem 0 0;
-	flex-basis: 8rem;
+    margin-left: 0;
+    font-size: $text-small;
+    letter-spacing: .5px;
+    text-transform: uppercase;
+    color: #bbb;
+    font-weight: bold;
+    padding: 0 .5rem 0 0;
+    flex-basis: 8rem;
   }
 }
 
@@ -388,17 +391,17 @@
   flex-flow: row wrap;
 
   span {
-	&#planet_summary_construction_queue,
-	&#planet_summary_research_queue {
-	  position: relative;
+    &#planet_summary_construction_queue,
+    &#planet_summary_research_queue {
+      position: relative;
 
-	  span.tooltip {
-		white-space: nowrap;
-		top: auto !important;
-		left: 0 !important;
-		transform: translateX(-100%);
-	  }
-	}
+      span.tooltip {
+        white-space: nowrap;
+        top: auto !important;
+        left: 0 !important;
+        transform: translateX(-100%);
+      }
+    }
   }
 }
 
@@ -411,49 +414,49 @@
   width: 100%;
   font-size: $text-small;
   @include respond-below(sm) {
-	margin: 0;
-	padding: 0 .25rem 0 0;
-	text-align: right;
-	flex: 1;
+    margin: 0;
+    padding: 0 .25rem 0 0;
+    text-align: right;
+    flex: 1;
   }
 }
 
 .planet_summary_production_orders {
   .planet_summary_production_complete {
-	position: relative;
+    position: relative;
   }
 
   div.tooltip {
-	position: absolute;
-	min-width: 110px;
-	top: 0 !important;
-	right: 0 !important;
-	left: unset !important;
+    position: absolute;
+    min-width: 110px;
+    top: 0 !important;
+    right: 0 !important;
+    left: unset !important;
 
-	.planet_summary_production_shipname,
-	.planet_summary_production_shipcount {
-	  width: unset;
-	}
+    .planet_summary_production_shipname,
+    .planet_summary_production_shipcount {
+      width: unset;
+    }
 
-	.planet_summary_production_shipname {
-	  float: left !important;
-	  padding-right: .5rem;
-	}
+    .planet_summary_production_shipname {
+      float: left !important;
+      padding-right: .5rem;
+    }
 
-	.planet_summary_production_shipcount {
-	  float: right !important;
-	}
+    .planet_summary_production_shipcount {
+      float: right !important;
+    }
 
-	br {
-	  display: block;
-	  height: 1rem;
-	  content: " ";
-	  margin-bottom: .25rem;
+    br {
+      display: block;
+      height: 1rem;
+      content: " ";
+      margin-bottom: .25rem;
 
-	  &:last-of-type {
-		margin-bottom: 0;
-	  }
-	}
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
   }
 }
 
