--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -106,7 +106,7 @@
 				color: $color-primary !important;
 				background: rgba($color-secondary, .4) !important;
 				border: 1px solid rgba($color-primary, .5) !important;
-				box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
+				box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
 				cursor: pointer;
 				border-radius: 3px;
 				text-transform: initial;
@@ -141,7 +141,7 @@
 			  color: #32ab52 !important;
 			  background: rgba($color-secondary, .4) !important;
 			  border: 1px solid rgba(#32ab52, .5) !important;
-			  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
+			  box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
 			  cursor: pointer;
 			  border-radius: 3px;
 			  text-transform: initial;
@@ -162,7 +162,7 @@
 			color: $color-primary !important;
 			background: rgba($color-secondary, .4) !important;
 			border: 1px solid rgba($color-primary, .5) !important;
-			box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
+			box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
 			cursor: pointer;
 			border-radius: 3px;
 			text-transform: initial;
