--- a/scss/components/_base_32.scss
+++ b/scss/components/_base_32.scss
@@ -166,9 +166,9 @@ input, .input, textarea, select, .checkbox {
   font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
   text-transform: uppercase;
   background: rgb(209, 210, 214);
-  -webkit-box-shadow: inset 0 -8px 10px rgba(0, 0, 0, 0.35), 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.2);
-  -moz-box-shadow: inset 0 -8px 10px rgba(0, 0, 0, 0.35), 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.2);
-  box-shadow: inset 0 -8px 10px rgba(0, 0, 0, 0.35), 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.2);
+  -webkit-box-shadow: inset 0 -8px 10px rgba(#000, .35), 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.2);
+  -moz-box-shadow: inset 0 -8px 10px rgba(#000, .35), 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.2);
+  box-shadow: inset 0 -8px 10px rgba(#000, .35), 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.2);
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
@@ -1402,7 +1402,7 @@ a.forum_title {
 
 #bcalc input, #bcalc select, #edit_comment_box input, #add_other input, #fleet_select_box select, #add_other select {
   background: transparent;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(#000, 0);
 }
 
 #bcalc option, #fleet_select_box option, #add_other option {
