--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -20,7 +20,7 @@ select,
   font-family: $font-default;
   background: rgba($color-secondary, .4);
   border: 1px solid rgba($color-primary, .5);
-  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
+  box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
   color: $color_text;
   font-size: 1rem;
   height: 1.5rem;
@@ -39,7 +39,7 @@ select,
 input[type="radio"] {
   background: rgba($color-secondary, .4) !important;
   border: 1px solid rgba($color-primary, .5);
-  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4) !important;
+  box-shadow: inset 0 2px 4px 2px rgba(#000, .4) !important;
   vertical-align: -.5rem;
   appearance: none;
   display: inline-block;
@@ -55,7 +55,7 @@ input[type="radio"] {
 	  height: 1rem;
 	  width: 1rem;
 	  background: $color-primary;
-	  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .5);
+	  box-shadow: inset 0 2px 4px 2px rgba(#000, .5);
 	  border-radius: 50%;
 	  left: .175rem;
 	  top: .175rem;
@@ -68,7 +68,7 @@ option {
   font-family: $font-default;
   background: $color-background !important;
   border: 1px solid rgba($color-primary, .5);
-  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
+  box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
   color: $color-text;
 }
 
@@ -81,7 +81,7 @@ input[type="password"] {
   color: $color_text;
   background: rgba($color-secondary, .4);
   border: 1px solid rgba($color-primary, .5);
-  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
+  box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
 }
 
 
@@ -96,7 +96,7 @@ input[type="checkbox"] {
   height: 1rem;
   background: rgba($color-secondary, .4);
   border: 1px solid rgba($color-primary, .5);
-  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
+  box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
   cursor: pointer;
   outline: none;
   transition: .3s;
@@ -119,7 +119,7 @@ table.mceEditor tr td select.mceSelectList {
   color: $color_text;
   background: rgba($color-secondary, .4);
   border: 1px solid rgba($color-primary, .5);
-  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
+  box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
 }
 
 
