--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -1,3 +1,31 @@
+body {
+  overflow: auto;
+  /* total width */
+  &::-webkit-scrollbar {
+    background-color: $color-secondary;
+    width: 8px;
+  }
+
+  /* background of the scrollbar except button or resizer */
+  &::-webkit-scrollbar-track {
+    background-color: $color-secondary;
+  }
+
+  /* scrollbar itself */
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba($color-secondary, .4);
+    border: 1px solid rgba($color-primary, .5);
+    box-shadow: inset 0 0 2px 0 rgba($color-primary, .4), 0 0 16px 0 rgba(#000, .9);
+    border-radius: 8px;
+  }
+
+  /* set button(top and bottom of the scrollbar) */
+  &::-webkit-scrollbar-button {
+    display: none;
+  }
+}
+
+
 /* Remove most template background images
    -------------------------------------------------------*/
 body, .pages, #top, #logo, #tnav, #bar_manual, #bar_support, #bar_portal, #bar_forums, #bar_logout, #bar_login, #bar_signup, #menu_top, .menu_grp, #menu_overview, #menu_preferences, #menu_logout, #menu_bottom, #header, #header_planet, #header_mail, #header_news, #header_tick, #header_metal, #header_crystal, #header_eonium, #header_asteroids, #header_value, #header_xp, #header_score, #header_rank, #planet_summary_construction, #planet_summary_research, #planet_summary_production, #planet_summary_footer, #contents_header, #contents_information, .container, #contents_footer, #tab_links, #footer, #important_messages_contents_header, #important_messages_contents_footer, #page_manual .entries, #page_manual .entry_sep, #entry_search {
@@ -120,15 +148,15 @@ hr {
   grid-template-rows: auto 1fr 1rem;
   grid-column-gap: 1rem;
   @include respond-below(sm) {
-	grid-template-columns: 100px auto;
-	grid-template-rows: 165px auto auto;
-	grid-row-gap: 0;
-	padding: 0;
-	max-width: 100vw;
+    grid-template-columns: 100px auto;
+    grid-template-rows: 165px auto auto;
+    grid-row-gap: 0;
+    padding: 0;
+    max-width: 100vw;
   }
 
   .maintext {
-	padding: 8px 0;
+    padding: 8px 0;
   }
 }
 
@@ -166,7 +194,7 @@ hr {
   color: $color-text;
   padding: .25rem .5rem;
   white-space: initial;
-  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .4);
+  box-shadow: 3px 3px 5px 0 rgba(#000, .4);
 }
 
 
@@ -176,70 +204,70 @@ hr {
   margin: 0 auto;
 
   p {
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
 
-	&:nth-child(1) {
-	  display: flex;
-	  justify-content: center;
-	}
+    &:nth-child(1) {
+      display: flex;
+      justify-content: center;
+    }
 
-	&:nth-child(2),
-	&:nth-child(3) {
-	  display: flex;
-	  justify-content: space-between;
-	}
+    &:nth-child(2),
+    &:nth-child(3) {
+      display: flex;
+      justify-content: space-between;
+    }
 
-	#to {
-	  display: inline-block;
-	  margin-left: 4rem;
-	}
+    #to {
+      display: inline-block;
+      margin-left: 4rem;
+    }
 
-	#subject {
-	  padding: 0 .75rem;
-	  text-align: left;
-	  display: inline-block;
-	  margin-left: 1.7rem;
-	  width: calc(100% - 6rem);
-	}
+    #subject {
+      padding: 0 .75rem;
+      text-align: left;
+      display: inline-block;
+      margin-left: 1.7rem;
+      width: calc(100% - 6rem);
+    }
 
-	#message_body {
-	  padding: .5rem .75rem;
-	  text-align: left;
-	  display: inline-block;
-	  vertical-align: -14rem;
-	  width: calc(100% - 6rem) !important;
-	  margin-left: 1.1rem;
-	  height: 15rem;
-	}
+    #message_body {
+      padding: .5rem .75rem;
+      text-align: left;
+      display: inline-block;
+      vertical-align: -14rem;
+      width: calc(100% - 6rem) !important;
+      margin-left: 1.1rem;
+      height: 15rem;
+    }
 
-	#charsleft {
-	  display: block;
-	  text-align: center !important;
-	  margin: 0 auto .5rem;
-	  width: 100%;
-	  font-size: $text-small;
-	}
+    #charsleft {
+      display: block;
+      text-align: center !important;
+      margin: 0 auto .5rem;
+      width: 100%;
+      font-size: $text-small;
+    }
 
-	input[type="submit"] {
-	  margin: 0 auto;
-	  color: black;
+    input[type="submit"] {
+      margin: 0 auto;
+      color: black;
 
-	  &:hover {
-		color: $color-primary;
-	  }
-	}
+      &:hover {
+        color: $color-primary;
+      }
+    }
   }
 
   br {
-	display: none;
+    display: none;
   }
 
   + p {
-	font-size: $text-small;
-	text-align: center !important;
+    font-size: $text-small;
+    text-align: center !important;
   }
 }
 
@@ -251,22 +279,22 @@ hr {
 
 .important_message {
   .title {
-	display: block;
-	padding: .5rem;
-	font-size: 1rem;
-	background: $color-secondary;
-	color: $color-text;
-	//background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
+    display: block;
+    padding: .5rem;
+    font-size: 1rem;
+    background: $color-secondary;
+    color: $color-text;
+    //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
   }
 
   .time {
-	display: block;
-	font-size: $text-small;
-	margin: .25rem .5rem 1rem;
+    display: block;
+    font-size: $text-small;
+    margin: .25rem .5rem 1rem;
   }
 
   p {
-	margin: .5rem;
+    margin: .5rem;
   }
 }
 
