--- a/scss/components/_login_support_manual_stats.scss
+++ b/scss/components/_login_support_manual_stats.scss
@@ -87,7 +87,7 @@
       background: $color-secondary;
       border-radius: .5rem;
       border: 1px solid rgba($color-primary, .5);
-      box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, .25), 1px 8px 30px 3px rgba(0, 0, 0, .3);
+      box-shadow: inset 0 0 8px 2px rgba(#000, .25), 1px 8px 30px 3px rgba(#000, .3);
 
       p:last-child {
         display: none;
