--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -49,7 +49,7 @@
 	&#menu_overview {
 	  padding: .5rem;
 	  width: 100%;
-	  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25), 3px 0 6px -3px rgba(0, 0, 0, 0.25);
+	  box-shadow: inset 0 0 8px 2px rgba(#000, .25), 3px 0 6px -3px rgba(#000, .25);
 	  border-top: 1px solid transparent;
 	  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 100%);
 	  border-image-slice: 1;
@@ -78,7 +78,7 @@
 	}
 
 	> ul {
-	  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25), 3px 0 6px -3px rgba(0, 0, 0, 0.25);
+	  box-shadow: inset 0 0 8px 2px rgba(#000, .25), 3px 0 6px -3px rgba(#000, .25);
 	  padding: .25rem 0 .5rem;
 
 	  > li {
@@ -136,7 +136,7 @@
 		position: relative;
 
 		&:before {
-		  content: "Ultimate skin v3.93";
+		  content: "Ultimate skin v4.01";
 		  position: absolute;
 		  bottom: -3.75rem;
 		  font-size: $text-large;
