--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -114,7 +114,7 @@ h2 {
 
 
 #notice {
-  background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .6) 50%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(to right, rgba(#000, 0) 0%, rgba(#000, .6) 50%, rgba(#000, 0) 100%);
   padding: .5rem;
   margin-top: .5rem;
   border: 1px solid transparent;
@@ -215,7 +215,7 @@ span.center {
   border: 1px solid rgba($color-primary, .5);
   padding: .25rem .5rem;
   white-space: initial;
-  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .4);
+  box-shadow: 3px 3px 5px 0 rgba(#000, .4);
 }
 
 
