--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -9,7 +9,7 @@
 	position: absolute;
 	width: 110px;
 	z-index: 1;
-	border: 1px solid rgba(0, 0, 0, .5);
+	border: 1px solid rgba(#000, .5);
 	background: rgba($color-primary, .18);
 	box-shadow: -1px 1px 5px 0px #000, 0px 0px 1px 1px $color-primary;
   }
@@ -26,7 +26,7 @@
 	border-left: 1px solid rgba(80, 164, 246, 0.21);
 	border-bottom: 1px solid rgba(black, .85);
 	border-right: 1px solid rgba(black, .8);
-	box-shadow: inset 0px -1px 2px 1px rgba(0, 0, 0, 0.5), 0px 0px 3px 2px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0px -1px 2px 1px rgba(#000, .5), 0px 0px 3px 2px rgba(#000, .3);
 	border-radius: 6px;
 
 	&:active {
