--- a/scss/components/_base_32.scss
+++ b/scss/components/_base_32.scss
@@ -1005,8 +1005,8 @@ a.questionmark {
 
 .slider_track {
   float: left;
-  font-size: 0px;
-  line-height: 0px;
+  font-size: 0;
+  line-height: 0;
   margin: 0;
   padding: 4px;
   width: 120px;
